--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ branches:
   only:
     - edgarriba-cmake
 env:
-  - LD_LIBRARY_PATH=$LD_LIBRARY_PATH:${HOME}/dakotabenjamin/OpenDroneMap/SuperBuild/install/lib
+  - LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/home/travis/dakotabenjamin/OpenDroneMap/SuperBuild/install/lib
 install:
   - pip install --upgrade numpy
   - pip install catkin-pkg
