--- a/.travis.yml
+++ b/.travis.yml
@@ -6,11 +6,10 @@ python:
 branches:
   only:
     - edgarriba-cmake
-env:
-  - LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/home/travis/dakotabenjamin/OpenDroneMap/SuperBuild/install/lib
 install:
   - pip install --upgrade numpy
   - pip install catkin-pkg
   - "bash configure.sh"
   - "mkdir build && cd build && cmake .. && make && cd .."
+  - "export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:`pwd`/SuperBuild/install/lib"
 script: nosetests
